@@ -1,3 +1,8 @@
+2002-01-18  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
+
+	* [w3m-dev 02871] ignore SIGCHLD (for at least EWS4800)
+	* search.c (open_migemo): signal(SIGCHLD, SIG_IGN);
+
 2002-01-18  Fumitoshi UKAI  <ukai@debian.or.jp>
 
 	* [w3m-dev 02870] don't kill migemo by SIGINT 
@@ -2121,4 +2126,4 @@
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.240 2002/01/17 15:05:43 ukai Exp $
+$Id: ChangeLog,v 1.241 2002/01/17 15:49:04 ukai Exp $
